# ecs-devsecops-pipeline

./: .gitignore  Jenkinsfile  README.md
backend/: .trivyignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/tests/: test_main.py
diagram-engine/: devsecops_architecture.py
docs/: product-description-specification.md
infrastructure/actual-environment/: backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/actual-environment/modules/cicd/: main.tf  outputs.tf  variables.tf
infrastructure/actual-environment/modules/ecr/: main.tf  variables.tf
infrastructure/actual-environment/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/actual-environment/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/actual-environment/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/bootstrap/: main.tf  outputs.tf  variables.tf
